--- a/index.html
+++ b/index.html
@@ -22,82 +22,82 @@
 <li>Resgate de Cópias do livro de mandamento</li>
    <ul>
    <li>Resumo: as irmãs Mary Elizabeth Rollins e Caroline estão testemunhando a destruição da gráfica onde o livro estava sendo impresso. Elas decidem arriscar suas vidas para salvar as páginas do Livro de Mandamentos que estavam sendo espalhadas pelas ruas.</li>
-   <li><a href="pag_178">pdf</a></li>
+   <li><a href="pag_178.pdf">pdf</a></li>
    </ul>
 <li>A fé dos Santos em meio as perseguições das turbas</li>
    <ul>
    <li>Resumo: Emily Partridge e sua irmã Harriet testemunham uma multidão armada de aproximadamente 50 homens cercando sua casa. A turba prende o pai das irmãs, Edward Partridge, que era bispo da igreja, e o leva para a praça pública, onde outro membro da igreja, Charles Allen, também foi capturado.Russell Hicks, um líder local, ameaça Edward Partridge, exigindo que ele deixe o condado ou enfrente consequências severas. Edward se recusa a sair, afirmando que não cometeu nenhum crime. A multidão reage violentamente, despejando piche e penas sobre Edward e Charles.</li>
-   <li><a href="pag_179">pdf</a></li>
+   <li><a href="pag_179.pdf">pdf</a></li>
    </ul>
 <li>Os santos reconhecem a presença de Deus nos momentos difíceis</li>
    <ul>
    <li>Resumo: Durante um período difícil de perseguições de turbas, os santos são surpreendidos por uma chuva de meteoros. Para Emily, filha de Edward Partridge, e outros membros, essa experiência celestial é interpretada como um sinal da presença de Deus, um motivo para se regozijar em meio às tribulações.Esses eventos destacam a tenacidade e a fé dos santos dos últimos dias em enfrentar desafios extremos e encontrarem consolo nas manifestações espirituais, mesmo durante tempos tumultuados e perigosos.</li>
-   <li><a href="pag_192">pdf</a></li>
+   <li><a href="pag_192.pdf">pdf</a></li>
    </ul>
 <li>As 3 testemunhas do Livro de Mórmon</li>
    <ul>
    <li>Resumo: Histórias sobre a experiência das 3 testemunhas do livro de mórmon. O testemunho das 3 testemunhas são um legado de fé de homens que permaneceram firmes em seus testemunhos sobre a divindade do livro. Seus testemunhos até hoje influênciam muitos santos ao redor do mundo.</li>
-   <li><a href="pag_73">pdf</a></li>
+   <li><a href="pag_73.pdf">pdf</a></li>
    </ul>
 <li>As 8 testemunhas do Livro de Mórmon</li>
    <ul>
    <li>Resumo: História sobre a experiência das 8 testemunhas do Livro de Mórmon. Assim como as 3 testemunhas, o testemunho das 8 testemunhas é uma prova ao mundo da veracidade do Livro de Mórmon e uma fonte de inspiração para milhoões de Santos.</li>
-   <li><a href="pag_74">pdf</a></li>
+   <li><a href="pag_74.pdf">pdf</a></li>
    </ul>
 <li>Martin Harris hipoteca sua fazenda</li>
    <ul>
    <li>Resumo: Martin Harris enfrenta dilemas financeiros ao tentar financiar a impressão, mas busca uma revelação divina para orientá-lo. O Senhor responde, comparando o sacrifício necessário a seu próprio sofrimento para cumprir a vontade divina. Ele instrui Martin a sacrificar seus próprios interesses, hipotecando sua fazenda para financiar a impressão do Livro de Mórmon.</li>
-   <li><a href="pag_76">pdf</a></li>
+   <li><a href="pag_76.pdf">pdf</a></li>
    </ul>
 <li>A primeira reunião da Igreja de Jesus Cristo dos Santos dos Últimos Dias</li>
    <ul>
    <li>Resumo: Em 6 de abril de 1830, na casa da família Whitmer, Joseph e Oliver obedeceram ao mandamento do Senhor e organizaram a Igreja. Escolheram seis pessoas para serem os primeiros membros. Cerca de 40 pessoas testemunharam o evento.</li>
-   <li><a href="pag_84">pdf</a></li>
+   <li><a href="pag_84.pdf">pdf</a></li>
    </ul>
 <li>Membros ajudam a pagar a construção do templo de Kirtland</li>
    <ul>
    <li>Resumo: Durante o outono de 1834, a Igreja estava atrasada nos pagamentos do terreno do templo, e os juros continuavam a se acumular. Voluntários ofereceram seu tempo para trabalhar no templo, e algumas famílias contribuíram com dinheiro ou bens excedentes para o projeto.</li>
-   <li><a href="pag_213">pdf</a></li>
+   <li><a href="pag_213.pdf">pdf</a></li>
    </ul>
 <li>Mesmo com pouco dinheiro os santos se esforçam para construir o templo</li>
    <ul>
    <li>Resumo: Os santos, incluindo Joseph Smith, participaram ativamente, desde o corte de blocos de pedra até o trabalho na madeireira para preparar materiais. Mulheres, como Emma Smith, contribuíram fazendo roupas e mantendo os trabalhadores bem alimentados. Algumas mulheres, como Vilate Kimball, esposa de Heber, dedicaram-se até mesmo a fiar lã, transformando-a em tecido para confeccionar roupas.</li>
-   <li><a href="pag_210">pdf</a></li>
+   <li><a href="pag_210.pdf">pdf</a></li>
    </ul>
 <li>Os Apóstolos partem em missão para Inglaterra</li>
    <ul>
    <li>Resumo: Em meio ao luto e doenças os Apóstolos desmostram fé no Senhor e partem em missão para a Grã-Bretanha deixando suas famílias nos Estados Unidos.</li>
-   <li><a href="pag_404">pdf</a></li>
+   <li><a href="pag_404.pdf">pdf</a></li>
    </ul>
 <li>Os frutos da Obra Missionária na Grã-Bretanha</li>
    <ul>
    <li>Resumo: Os Apóstolos veem os frutos do trabalho missionário na Inglaterra após muito esforço e fé.</li>
-   <li><a href="pag_410">pdf</a></li>
+   <li><a href="pag_410.pdf">pdf</a></li>
    </ul>
 <li>História de Jane Manning</li>
    <ul>
    <li>Resumo:  Jane Manning, uma mulher negra, e sua família chegaram a Nauvoo procurando Joseph Smith. Jane compartilhou suas experiências e desafios durante sua jornada desde Nova York até Nauvoo. Jane e sua família foram acolhidas pela família Smith, demonstrando o compromisso dos líderes mórmons em ajudar e apoiar os membros em necessidade.</li>
-   <li><a href="pag_504">pdf</a></li>
+   <li><a href="pag_504.pdf">pdf</a></li>
    </ul>
 <li>Apoio ao Profeta Brigham Young</li>
    <ul>
    <li>Resumo: Após a morte súbita de Joseph Smith e seu irmão Hyrum em junho de 1844 diversas pessoas querem reivindicar para si a posição de Presidente da Igreja. Em meio a essa disputa, os santos reconhecem que Brigham Young é sucessor do Profeta Joseph e o apoiam como novo profeta e Presidente da Igreja de Jesus Cristo.</li>
-   <li><a href="pag_562">pdf</a></li>
+   <li><a href="pag_562.pdf">pdf</a></li>
    </ul>
 <li>Missão de Addison Pratt</li>
    <ul>
    <li>Resumo: Relato sobre os esforços missionários de Addison Pratt, um dos grande missionários que ajudou no desenvolvimento da igreja no Pacífico Sul.</li>
-   <li><a href="pag_571">pdf</a></li>
+   <li><a href="pag_571.pdf">pdf</a></li>
    </ul>
 <li>Muitos membros desejam as benções do templo</li>
    <ul>
    <li>Resumo: Em meio a perseguições do Governo de Illinois, e de diversas turbas, os santos decidem migrar para o oeste dos Estados Unidos. Embora já estivessem com os preparativos para partirem, muitos membros da igreja fizeram grandes filas para poderem participar do templo e receber as benções do templo.</li>
-   <li><a href="pag_582">pdf</a></li>
+   <li><a href="pag_582.pdf">pdf</a></li>
    </ul>
 <li>Santos terminam o templo de Nauvoo antes de partirem (Santos 2)</li>
    <ul>
    <li>Resumo: Embora os santos já estivessem indo embora de Nauvoo para o Oeste, alguns líderes e membros ficaram em Nauvoo a fim de obedecer ao mandamento do Senhor de terminar a construção do templo. Após terminarem e dedicarem, eles vão embora de Nauvoo e deixam o templo nas mãos do Senhor. Mais tarde o templo sofre um trágico incêndio.</li>
-   <li><a href="pag_27_s2">pdf</a></li>
+   <li><a href="pag_27_s2.pdf">pdf</a></li>
    </ul>
 
 
